src/test/deca/syntax/invalid/obtained_res/wrongReadFloatsynt.res
./src/test/deca/syntax/invalid/created/ReadFloat_Int/wrongReadFloat.deca:9:23: extraneous input '10' expecting ')'
